[package]
name = "count-cat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
noodles-bgzf = { version = "0.31.0", features = ["async", "libdeflate"] }
noodles-core = "0.15.0"
noodles-fasta = { version = "0.40.0", features = ["async"] }
rayon = "1.10.0"
tokio = { version = "1.38.0", features = ["full"] }
